--- a/Practicas/P1_01_Hola_mundo.ipynb
+++ b/Practicas/P1_01_Hola_mundo.ipynb
@@ -12,15 +12,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "11ef61bd",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hola mundo\n"
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mLa ejecución de celdas con '.venv (3.13.7) (Python 3.13.7)' requiere el paquete ipykernel.\n",
+      "\u001b[1;31mInstale \"ipykernel\" en el entorno de Python. \n",
+      "\u001b[1;31mComando: \"\"c:/Users/Madar/Documents/Cosas de Control de VS COde/control-clasico/.venv/Scripts/python.exe\" -m pip install ipykernel -U --force-reinstall\""
      ]
     }
    ],
@@ -39,7 +42,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv (3.13.7)",
    "language": "python",
    "name": "python3"
   },
