--- a/Practicas/P_3_02_Controlador_LTR701_PID.ipynb
+++ b/Practicas/P_3_02_Controlador_LTR701_PID.ipynb
@@ -495,7 +495,7 @@
     "\n",
     "Programe su Arduino con el código anterior y sus ganancias sintonizadas. Pruebe el sistema real.\n",
     "\n",
-    "1.  Abra el \"Serial Plotter\" de Arduino (Herramientas -> Serial Plotter).\n",
+    "1.  Abra el \"Serial Plotter\" de Arduino (Herramientas -> Serial Ploter).\n",
     "2.  Configure el `setpoint_C` a 35°C y observe cómo el sistema responde desde la temperatura ambiente.\n",
     "3.  Una vez estable, cambie el `setpoint_C` a 40°C y observe la respuesta.\n",
     "4.  Capture una imagen de su gráfica del Serial Plotter.\n",
